5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1757_2542.log
== TEST (2019-07-03 12:23:21) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
while(x<size(v)):
	a=s[x]+e[x]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:23:41) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
while(x<size(s)):
	a=s[x]+e[x]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:23:54) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
while(x<size(s)):
	a=e[x]+s[x]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:24:39) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
i=0
while(i<size(s)):
	a=e[i]+s[i]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:24:47) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
i=0
while(i<size(s)):
	a=e[i]+s[i]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:25:10) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
i=0
while(x<size(s)):
	a=e[i]+s[i]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:25:24) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
i=0
while(x<size(s)):
	a=e[x]+s[x]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:31:49) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
while(x<size(s)):
	a=s[x]+e[x]
		if (a>0):
			e[x]=a-s[x]
	x+=1
print(a)

-- ERROR:
File "XXXX", line 8
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:31:58) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))
x=0
while(x<size(s)):
	a=s[x]+e[x]
		if(a>0):
			e[x]=a-s[x]
	x+=1
print(a)

-- ERROR:
File "XXXX", line 8
    if(a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:39:54) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))

a=s[0]+e[0]
x = 1
while(x<size(s)):
	a=e[x - 1] - s[x] + e[x]
	
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:41:20) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))

a=s[0]+e[0]
x = 1
while(x<size(s)):
	a= a - s[x] + e[x]
	
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:42:37) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))

a=s[0]+e[0]
x = 1
while(x<size(s)):
	a = a - s[x] + e[x]

	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:42:40) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))

a=s[0]+e[0]
x = 1
while(x<size(s)):
	a = a - s[x] + e[x]
	x+=1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 12:42:48) 
-- CODE:
from numpy import*

e=array(eval(input()))
s=array(eval(input()))

a=s[0]+e[0]
x = 1
while(x<size(s)):
	a = a - s[x] + e[x]
	x+=1
print(a)

-- EXECUTION TIME:
1.229
-- TEST CASE 1:
---- input:
[10,20,15,0]
[0,5,12,0]

---- correct output:
28

---- user output:
28
-- TEST CASE 2:
---- input:
[10,50,15,0]
[0,10,12,4]

---- correct output:
49

---- user output:
49
-- TEST CASE 3:
---- input:
[10,24,2,10]
[5,20,10,4]

---- correct output:
7

---- user output:
17
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
